--- a/angular/src/account/login/login.component.html
+++ b/angular/src/account/login/login.component.html
@@ -1,4 +1,4 @@
-﻿<div [@routerTransition]>
+<div [@routerTransition] [dir]="rtl">
   <h4 class="text-center mb-3">{{ "LogIn" | localize }}</h4>
   <form novalidate autocomplete="off" #loginForm="ngForm" (ngSubmit)="login()">
     <div class="form-group">
@@ -64,6 +64,7 @@
           </label>
         </div>
       </div>
+        <br />
       <div class="col-md-4">
         <button
           type="submit"
