--- a/angular/src/account/account.component.scss
+++ b/angular/src/account/account.component.scss
@@ -128,3 +128,9 @@
 .login-wrapper-container .block-left .form-control:focus {
     border-bottom: 1px solid #562819;
 }
+
+.card {
+    height: 400px;
+    padding: 40px;
+    width: 100%;
+}
