--- a/angular/src/account/login/login.component.html
+++ b/angular/src/account/login/login.component.html
@@ -14,9 +14,9 @@
           #userNameOrEmailAddressModel="ngModel"
           #userNameOrEmailAddressEl
         />
-        <div class="input-group-append">
+        <div class="input-group-append" dir="rtl">
           <div class="input-group-text">
-            <span class="fas fa-user"></span>
+            <span class="fas fa-user" ></span>
           </div>
         </div>
       </div>
@@ -38,9 +38,9 @@
           #passwordModel="ngModel"
           #passwordEl
         />
-        <div class="input-group-append">
+        <div class="input-group-append"  dir="rtl">
           <div class="input-group-text">
-            <span class="fas fa-lock"></span>
+            <span class="fas fa-lock"  ></span>
           </div>
         </div>
       </div>
@@ -51,7 +51,7 @@
     </div>
     <div class="form-group row">
       <div class="col-md-8">
-        <div class="custom-control custom-checkbox">
+        <div class="custom-control custom-checkbox"  dir="rtl">
           <input
             type="checkbox"
             class="custom-control-input"
