--- a/angular/src/app/home/home.component.html
+++ b/angular/src/app/home/home.component.html
@@ -1,5 +1,5 @@
-﻿<div [@routerTransition]>
-  <section class="content-header">
+<div [@routerTransition] >
+  <section class="content-header" >
     <div class="container-fluid">
       <div class="row">
         <div class="col-12">
@@ -8,7 +8,7 @@
       </div>
     </div>
   </section>
-  <section class="content px-2">
+  <section class="content px-2" dir="rtl"> 
     <div class="container-fluid">
       <div class="row">
         <div class="col-12">
