--- a/angular/src/app/layout/footer.component.html
+++ b/angular/src/app/layout/footer.component.html
@@ -1,7 +1,7 @@
 <footer class="main-footer">
   <strong>
     Copyright &copy; {{ currentYear }}
-    <a href="javascript:;">eConLab</a>.
+    <a href="javascript:;">QC</a>.
   </strong>
   <div class="float-right d-none d-sm-inline-block">
     <b>{{ "Version" | localize }} </b> {{ versionText }}
