--- a/angular/src/app/layout/header.component.html
+++ b/angular/src/app/layout/header.component.html
@@ -1,6 +1,6 @@
-<nav class="main-header navbar navbar-expand navbar-white navbar-light">
+<nav class="main-header navbar navbar-expand navbar-white navbar-light" dir="rtl">
   <header-left-navbar></header-left-navbar>
-  <ul class="navbar-nav ml-auto">
+  <ul class="navbar-nav ml-auto" dir="rtl">
     <header-language-menu></header-language-menu>
     <header-user-menu></header-user-menu>
   </ul>
