--- a/angular/src/app/layout/sidebar-menu.component.html
+++ b/angular/src/app/layout/sidebar-menu.component.html
@@ -1,4 +1,4 @@
-<nav class="mt-2">
+<nav class="mt-2" dir="rtl">
   <ul
     class="nav nav-pills nav-sidebar flex-column nav-flat"
     data-widget="treeview"
