--- a/angular/src/account/login/login.component.html
+++ b/angular/src/account/login/login.component.html
@@ -1,84 +1,76 @@
 <div [@routerTransition] [dir]="rtl">
-  <h4 class="text-center mb-3">{{ "LogIn" | localize }}</h4>
-  <form novalidate autocomplete="off" #loginForm="ngForm" (ngSubmit)="login()">
-    <div class="form-group">
-      <div class="input-group">
-        <input
-          type="text"
-          class="form-control"
-          name="userNameOrEmailAddress"
-          [(ngModel)]="authService.authenticateModel.userNameOrEmailAddress"
-          [placeholder]="'UserNameOrEmail' | localize"
-          required
-          maxlength="256"
-          #userNameOrEmailAddressModel="ngModel"
-          #userNameOrEmailAddressEl
-        />
-        <div class="input-group-append" dir="rtl">
-          <div class="input-group-text">
-            <span class="fas fa-user" ></span>
-          </div>
+    <h4 class="text-center mb-3">{{ "LogIn" | localize }}</h4>
+    <form novalidate autocomplete="off" #loginForm="ngForm" (ngSubmit)="login()">
+        <div class="form-group">
+            <div class="input-group-login">
+                <input type="text"
+                       class="form-control"
+                       name="userNameOrEmailAddress"
+                       [(ngModel)]="authService.authenticateModel.userNameOrEmailAddress"
+                       [placeholder]="'UserNameOrEmail' | localize"
+                       style="text-align: left; "
+                       required
+                       maxlength="256"
+                       #userNameOrEmailAddressModel="ngModel"
+                       #userNameOrEmailAddressEl />
+                <!--<div class="input-group-append" dir="rtl">
+                  <div class="input-group-text">
+                    <span class="fas fa-user" ></span>
+                  </div>
+                </div>-->
+            </div>
+            <abp-validation-summary [control]="userNameOrEmailAddressModel"
+                                    [controlEl]="userNameOrEmailAddressEl"></abp-validation-summary>
         </div>
-      </div>
-      <abp-validation-summary
-        [control]="userNameOrEmailAddressModel"
-        [controlEl]="userNameOrEmailAddressEl"
-      ></abp-validation-summary>
-    </div>
-    <div class="form-group">
-      <div class="input-group">
-        <input
-          type="password"
-          class="form-control"
-          name="password"
-          [(ngModel)]="authService.authenticateModel.password"
-          [placeholder]="'Password' | localize"
-          required
-          maxlength="32"
-          #passwordModel="ngModel"
-          #passwordEl
-        />
-        <div class="input-group-append"  dir="rtl">
-          <div class="input-group-text">
-            <span class="fas fa-lock"  ></span>
-          </div>
+        <div class="form-group">
+            <div class="input-group-login">
+                <input type="password"
+                       style="text-align: left; "
+                       class="form-control"
+                       name="password"
+                       [(ngModel)]="authService.authenticateModel.password"
+                       [placeholder]="'Password' | localize"
+                       required
+                       maxlength="32"
+                       #passwordModel="ngModel"
+                       #passwordEl />
+                <!--<div class="input-group-append"  >
+                  <div class="input-group-text" dir="rtl">
+                    <span class="fas fa-lock"  ></span>
+                  </div>
+                </div>-->
+            </div>
+            <abp-validation-summary [control]="passwordModel"
+                                    [controlEl]="passwordEl"></abp-validation-summary>
         </div>
-      </div>
-      <abp-validation-summary
-        [control]="passwordModel"
-        [controlEl]="passwordEl"
-      ></abp-validation-summary>
-    </div>
-    <div class="form-group row">
-      <div class="col-md-8">
-        <div class="custom-control custom-checkbox"  dir="rtl">
-          <input
-            type="checkbox"
-            class="custom-control-input"
-            id="rememberMe"
-            name="rememberMe"
-            [(ngModel)]="authService.rememberMe"
-          />
-          <label for="rememberMe" class="custom-control-label">
-            {{ "RememberMe" | localize }}
-          </label>
+        <div class="form-group row">
+            <!--<div class="col-md-8">
+              <div class="custom-control custom-checkbox"  dir="rtl">
+                <input
+                  type="checkbox"
+                  class="custom-control-input"
+                  id="rememberMe"
+                  name="rememberMe"
+                  [(ngModel)]="authService.rememberMe"
+                />
+                <label for="rememberMe" class="custom-control-label">
+                  {{ "RememberMe" | localize }}
+                </label>
+              </div>
+            </div>-->
+            <br />
+            <div class="col-md-5">
+                <button type="submit"
+                        class="btn btn-primary btn-block"
+                        [disabled]="!loginForm.form.valid || submitting">
+                    {{ "LogIn" | localize }}
+                </button>
+            </div>
         </div>
-      </div>
-        <br />
-      <div class="col-md-4">
-        <button
-          type="submit"
-          class="btn btn-primary btn-block"
-          [disabled]="!loginForm.form.valid || submitting"
-        >
-          {{ "LogIn" | localize }}
-        </button>
-      </div>
-    </div>
-  </form>
-  <p *ngIf="isSelfRegistrationAllowed" class="mb-1">
-    <a [routerLink]="['../register']">
-      <i class="fa fa-plus-circle"></i> {{ "Register" | localize }}
-    </a>
-  </p>
+    </form>
+    <p *ngIf="isSelfRegistrationAllowed" class="mb-1">
+        <a [routerLink]="['../register']">
+            <i class="fa fa-plus-circle"></i> {{ "Register" | localize }}
+        </a>
+    </p>
 </div>
