--- a/angular/src/account/login/login.component.scss
+++ b/angular/src/account/login/login.component.scss
@@ -13,7 +13,7 @@
     transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
 }
 
-.input-group {
+.input-group-login {
     position: relative;
     display: flex;
     flex-wrap: wrap;
