--- a/angular/src/shared/core.less
+++ b/angular/src/shared/core.less
@@ -141,5 +141,5 @@ body:not(.sidebar-mini-md):not(.sidebar-mini-xs):not(.layout-top-nav) .main-head
 }
 .card-footer:last-child {
     border-radius: 0 0 calc(.25rem - 0) calc(.25rem - 0);
-    direction: ltr;
+    direction: rtl;
 }
