- Handle Add and Edit Contractors

--- a/angular/src/app/contractor/contractor-edit/contractor-edit.component.html
+++ b/angular/src/app/contractor/contractor-edit/contractor-edit.component.html
@@ -157,7 +157,7 @@
                                                 [controlEl]="emailAddress"></abp-validation-summary>
                     </div>
                 </div>
-                <div class="form-group row required">
+                <!--<div class="form-group row required">
                     <label class="col-md-3 col-form-label" for="surname">
                         {{ "Password" | localize }}
                     </label>
@@ -178,7 +178,7 @@
                                                 [controlEl]="password"
                                                 [customValidationErrors]="passwordValidationErrors"></abp-validation-summary>
                     </div>
-                </div>
+                </div>-->
             </tab>
         </tabset>
     </div>
