--- a/angular/src/shared/core.less
+++ b/angular/src/shared/core.less
@@ -143,3 +143,18 @@ body:not(.sidebar-mini-md):not(.sidebar-mini-xs):not(.layout-top-nav) .main-head
     border-radius: 0 0 calc(.25rem - 0) calc(.25rem - 0);
     direction: rtl;
 }
+.modal-header {
+    display: flex;
+    direction: rtl;
+    align-items: flex-start;
+    justify-content: space-between;
+    padding: 1rem;
+    border-bottom: 1px solid #e9ecef !important;
+    border-top-left-radius: calc(0.3rem - 1px) !important;
+    border-top-right-radius: calc(0.3rem - 1px) !important;
+}
+
+.modal-header .close {
+    padding: 1rem;
+    margin: -1rem -1rem -1rem !important;
+}
