--- a/angular/src/app/contractor/contractos-list/contractos-list.component.html
+++ b/angular/src/app/contractor/contractos-list/contractos-list.component.html
@@ -3,7 +3,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-6">
-                    <h1>{{ "Users" | localize }}</h1>
+                    <h1>{{ "Contractors" | localize }}</h1>
                 </div>
                 <div class="col-6 text-right">
                     <a href="javascript:;" class="btn bg-blue" (click)="createUser()">
@@ -118,10 +118,10 @@
                         <table class="table table-striped table-bordered" [busy]="isTableLoading">
                             <thead class="bg-light">
                                 <tr>
-                                    <th>{{ "UserName" | localize }}</th>
-                                    <th>{{ "FullName" | localize }}</th>
-                                    <th>{{ "EmailAddress" | localize }}</th>
-                                    <th>{{ "IsActive" | localize }}</th>
+                                    <th>{{ "COMMERCIALNAME" | localize }}</th>
+                                    <th>{{ "CommericalRegisterationNumber" | localize }}</th>
+                                    <th>{{ "ADDRESS" | localize }}</th>
+                                    <th>{{ "Contract_Name" | localize }}</th>
                                     <th style="width: 310px;">{{ "Actions" | localize }}</th>
                                 </tr>
                             </thead>
@@ -136,18 +136,10 @@
                           totalItems: totalItems
                         }
                 ">
-                                    <td>{{ user.userName }}</td>
-                                    <td>{{ user.fullName }}</td>
-                                    <td>{{ user.emailAddress }}</td>
-                                    <td>
-                                        <div class="custom-control custom-checkbox">
-                                            <input type="checkbox"
-                                                   class="custom-control-input"
-                                                   disabled
-                                                   [checked]="user.isActive" />
-                                            <label class="custom-control-label"></label>
-                                        </div>
-                                    </td>
+                                    <td>{{ user.commericalName }}</td>
+                                    <td>{{ user.commericalRegisterationNumber }}</td>
+                                    <td>{{ user.address }}</td>
+                                    <td>{{ user.contactName }}</td>
                                     <td>
                                         <button type="button"
                                                 class="btn btn-sm bg-secondary"
@@ -161,12 +153,7 @@
                                             <i class="fas fa-trash"></i>
                                             {{ "Delete" | localize }}
                                         </button>
-                                        <button type="button"
-                                                class="btn btn-sm bg-secondary"
-                                                (click)="resetPassword(user)">
-                                            <i class="fas fa-lock"></i>
-                                            {{ "ResetPassword" | localize }}
-                                        </button>
+                                      
                                     </td>
                                 </tr>
                             </tbody>
