--- a/angular/src/account/account.component.html
+++ b/angular/src/account/account.component.html
@@ -16,8 +16,12 @@
                             <div class="block-right col-6">
                                 <div class="login-logo-wrapper" style="float:left">
                                     <img src="/assets/img/img.jpg" alt="App User" class="logo-img-login">
-
+                                    <h2>
+                                        <i class="fa fa-chrome"></i>
+                                        <span>Quality Control</span>
+                                    </h2>
                                 </div>
+                               
                             </div>
                         </div>
                     </div>
