--- a/angular/src/app/contractor/contractor-edit/contractor-edit.component.html
+++ b/angular/src/app/contractor/contractor-edit/contractor-edit.component.html
@@ -88,7 +88,7 @@
                         {{ "UserName" | localize }}
                     </label>
                     <div class="col-md-9">
-                        <input type="text"
+                        <input type="text" disabled="disabled"
                                class="form-control"
                                name="userName"
                                id="userName"
@@ -107,7 +107,7 @@
                         {{ "Name" | localize }}
                     </label>
                     <div class="col-md-9">
-                        <input type="text"
+                        <input type="text" disabled="disabled"
                                class="form-control"
                                name="name"
                                id="name"
@@ -120,7 +120,7 @@
                                                 [controlEl]="nameE1"></abp-validation-summary>
                     </div>
                 </div>
-                <div class="form-group row required">
+                <!--<div class="form-group row required">
                     <label class="col-md-3 col-form-label" for="surname">
                         {{ "Surname" | localize }}
                     </label>
@@ -137,13 +137,13 @@
                         <abp-validation-summary [control]="surnameModel"
                                                 [controlEl]="surnameE1"></abp-validation-summary>
                     </div>
-                </div>
+                </div>-->
                 <div class="form-group row required">
                     <label class="col-md-3 col-form-label" for="Email">
                         {{ "EmailAddress" | localize }}
                     </label>
                     <div class="col-md-9">
-                        <input type="text"
+                        <input type="text"  
                                class="form-control"
                                name="emailAddress"
                                id="emailAddress"
