--- a/angular/src/shared/core.less
+++ b/angular/src/shared/core.less
@@ -158,3 +158,29 @@ body:not(.sidebar-mini-md):not(.sidebar-mini-xs):not(.layout-top-nav) .main-head
     padding: 1rem;
     margin: -1rem -1rem -1rem !important;
 }
+.brand-link {
+    display: flex !important;
+    font-size: 1.25rem;
+    line-height: 1.5;
+    padding: 0.8125rem 0.5rem;
+    transition: width .3s ease-in-out;
+    white-space: nowrap;
+    /* direction: ltr; */
+}
+.form-control {
+    display: block;
+    width: 100%;
+    text-align: left;
+    height: calc(2.25rem + 2px);
+    padding: 0.375rem 0.75rem rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #495057;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    border-radius: 0.25rem;
+    box-shadow: inset 0 0 0 transparent;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
