--- a/angular/src/app/ageny/agency-create/agency-create.component.html
+++ b/angular/src/app/ageny/agency-create/agency-create.component.html
@@ -2,7 +2,7 @@
       autocomplete="off"
       #createUserModal="ngForm"
       (ngSubmit)="save()">
-    <abp-modal-header [title]="'CreateNewContractor' | localize"
+    <abp-modal-header [title]="'CreateNewAgency' | localize"
                       (onCloseClick)="bsModalRef.hide()"></abp-modal-header>
     <div class="modal-body">
 
