--- a/angular/src/account/account.component.html
+++ b/angular/src/account/account.component.html
@@ -1,5 +1,5 @@
 <!--<div class="login-box">-->
-    <account-header></account-header>
+    <!--<account-header></account-header>-->
     <div class="card" style="width: 900px !important; border-radius: 21px; " >
         <div *ngIf="showTenantChange()" class="card-header">
             <tenant-change></tenant-change>
