--- a/angular/src/app/contractor/contractor-edit/contractor-edit.component.html
+++ b/angular/src/app/contractor/contractor-edit/contractor-edit.component.html
@@ -8,51 +8,180 @@
 
         <tabset>
             <tab [heading]="'Details' | localize" class="pt-3 px-2">
-                <!--<div class="form-group row required">
-                    <label class="col-md-3 col-form-label" for="COMMERCIALNAME">
-                        {{ "COMMERCIALNAME" | localize }}
-                    </label>
-                    <div class="col-md-9">
-                        <input type="text"
-                               class="form-control"
-                               name="commericalName"
-                               id="commericalName"
-                               required
-                               maxlength="32"
-                               [(ngModel)]="qcUser.commericalName"
-                               #commericalNameModel="ngModel"
-                               #commericalNameE1 />
-                        <abp-validation-summary [control]="commericalNameModel"
-                                                [controlEl]="commericalNameE1"></abp-validation-summary>
-                    </div>
-                </div>-->
-                <!--<div class="form-group row required">
-                    <label class="col-md-3 col-form-label" for="CommericalRegisterationNumber">
-                        {{ "CommericalRegisterationNumber" | localize }}
-                    </label>
-                    <div class="col-md-9">
-                        <input type="text"
-                               class="form-control"
-                               name="commericalRegisterationNumber"
-                               id="commericalRegisterationNumber"
-                               required
-                               maxlength="32"
-                               [(ngModel)]="qcUser.commericalRegisterationNumber"
-                               #commericalRegisterationNumberModel="ngModel"
-                               #commericalRegisterationNumberE1 />
-                        <abp-validation-summary [control]="commericalRegisterationNumberModel"
-                                                [controlEl]="commericalRegisterationNumberE1"></abp-validation-summary>
-                    </div>
-                </div>-->
+
                 <div class="form-group row required">
                     <label class="col-md-3 col-form-label" for="ADDRESS">
+                        {{ "UserType" | localize }}
+                    </label>
+                    <div class="col-md-9">
+                        <select name="userType"
+                                class="form-control"
+                                id="userType" [(ngModel)]="qcUser.userTypes"
+                                #userTypeModel="ngModel"
+                                #userType required>
+                            <option *ngFor="let userType of userTypes" [value]="userType.id">{{userType.arabicName}}</option>
+                        </select>
+                        <abp-validation-summary [control]="userTypeModel"
+                                                [controlEl]="userType"></abp-validation-summary>
+                    </div>
+                </div>
+
+                <div class="form-group row required">
+                    <label class="col-md-3 col-form-label" for="COMMERCIALNAME">
+                        {{ "Name" | localize }}
+                    </label>
+                    <div class="col-md-9">
+                        <input type="text"
+                               class="form-control"
+                               name="qcName"
+                               id="qcName"
+                               required
+                               maxlength="32"
+                               [(ngModel)]="qcUser.name"
+                               #qcNameModel="ngModel"
+                               #qcNameE1 />
+                        <abp-validation-summary [control]="qcNameModel"
+                                                [controlEl]="qcNameE1"></abp-validation-summary>
+                    </div>
+                </div>
+                <div class="form-group row required">
+                    <label class="col-md-3 col-form-label" for="CommericalRegisterationNumber">
+                        {{ "NationalId" | localize }}
+                    </label>
+                    <div class="col-md-9">
+                        <input type="text"
+                               class="form-control"
+                               name="nationalId"
+                               id="nationalId"
+                               required
+                               maxlength="32"
+                               [(ngModel)]="qcUser.nationalId"
+                               #nationalIdModel="ngModel"
+                               #nationalIdE1 />
+                        <abp-validation-summary [control]="nationalIdModel"
+                                                [controlEl]="nationalIdE1"></abp-validation-summary>
+                    </div>
+                </div>
+                <div class="form-group row required">
+                    <label class="col-md-3 col-form-label" for="ADDRESS">
+                        {{ "NationalityName" | localize }}
+                    </label>
+                    <div class="col-md-9">
+                        <input type="text"
+                               class="form-control"
+                               name="nationalityName"
+                               id="nationalityName"
+                               required
+                               maxlength="32"
+                               [(ngModel)]="qcUser.nationalityName"
+                               #nationalityNameModel="ngModel"
+                               #nationalityName />
+                        <abp-validation-summary [control]="nationalityNameModel"
+                                                [controlEl]="nationalityName"></abp-validation-summary>
+                    </div>
+                </div>
+                <div class="form-group row required">
+                    <label class="col-md-3 col-form-label" for="CONTRACTNAME">
+                        {{ "StaffNumber" | localize }}
+                    </label>
+                    <div class="col-md-9">
+                        <input type="text"
+                               class="form-control"
+                               name="staffNumber"
+                               id="staffNumber"
+                               required
+                               maxlength="32"
+                               [(ngModel)]="qcUser.staffNumber"
+                               #staffNumberModel="ngModel"
+                               #staffNumber />
+                        <abp-validation-summary [control]="staffNumberModel"
+                                                [controlEl]="staffNumber"></abp-validation-summary>
+                    </div>
+                </div>
+
+                <div class="form-group row required">
+                    <label class="col-md-3 col-form-label" for="ADDRESS">
+                        {{ "Agency" | localize }}
+                    </label>
+                    <div class="col-md-9">
+                        <select name="agencyTypeId"
+                                class="form-control"
+                                id="agencyId" [(ngModel)]="qcUser.agencyId"
+                                #agencyIdModel="ngModel"
+                                #agencyId required>
+                            <option *ngFor="let agency of agencies" [value]="agency.id">{{agency.name}}</option>
+                        </select>
+                        <abp-validation-summary [control]="agencyIdModel"
+                                                [controlEl]="agencyId"></abp-validation-summary>
+                    </div>
+                </div>
+
+                <div class="form-group row required">
+                    <label class="col-md-3 col-form-label" for="CONTRACTNAME">
+                        {{ "PhoneNumber" | localize }}
+                    </label>
+                    <div class="col-md-9">
+                        <input type="text"
+                               class="form-control"
+                               name="phoneNumber"
+                               id="phoneNumber"
+                               required
+                               maxlength="32"
+                               [(ngModel)]="qcUser.phoneNumber"
+                               #phoneNumberModel="ngModel"
+                               #phoneNumber />
+                        <abp-validation-summary [control]="phoneNumberModel"
+                                                [controlEl]="phoneNumber"></abp-validation-summary>
+                    </div>
+                </div>
+
+                <div class="form-group row required">
+                    <label class="col-md-3 col-form-label" for="CONTRACTNAME">
+                        {{ "MobilePhoneNumber" | localize }}
+                    </label>
+                    <div class="col-md-9">
+                        <input type="text"
+                               class="form-control"
+                               name="mobilePhoneNumber"
+                               id="mobilePhoneNumber"
+                               required
+                               maxlength="32"
+                               [(ngModel)]="qcUser.mobilePhoneNumber"
+                               #mobilePhoneNumberModel="ngModel"
+                               #mobilePhoneNumber />
+                        <abp-validation-summary [control]="mobilePhoneNumberModel"
+                                                [controlEl]="mobilePhoneNumber"></abp-validation-summary>
+                    </div>
+                </div>
+
+                <div class="form-group row required">
+                    <label class="col-md-3 col-form-label" for="CONTRACTNAME">
+                        {{ "WorkPlace" | localize }}
+                    </label>
+                    <div class="col-md-9">
+                        <input type="text"
+                               class="form-control"
+                               name="workPlace"
+                               id="workPlace"
+                               required
+                               maxlength="32"
+                               [(ngModel)]="qcUser.workPlace"
+                               #workPlaceModel="ngModel"
+                               #workPlace />
+                        <abp-validation-summary [control]="workPlaceModel"
+                                                [controlEl]="workPlace"></abp-validation-summary>
+                    </div>
+                </div>
+
+                <div class="form-group row required">
+                    <label class="col-md-3 col-form-label" for="CONTRACTNAME">
                         {{ "ADDRESS" | localize }}
                     </label>
                     <div class="col-md-9">
                         <input type="text"
                                class="form-control"
-                               name="Address"
-                               id="Address"
+                               name="address"
+                               id="address"
                                required
                                maxlength="32"
                                [(ngModel)]="qcUser.address"
@@ -62,22 +191,23 @@
                                                 [controlEl]="address"></abp-validation-summary>
                     </div>
                 </div>
+
                 <div class="form-group row required">
                     <label class="col-md-3 col-form-label" for="CONTRACTNAME">
-                        {{ "Name" | localize }}
+                        {{ "Fax" | localize }}
                     </label>
                     <div class="col-md-9">
                         <input type="text"
                                class="form-control"
-                               name="Name"
-                               id="Name"
+                               name="fax"
+                               id="fax"
                                required
                                maxlength="32"
-                               [(ngModel)]="qcUser.name"
-                               #qcNameModel="ngModel"
-                               #qcName />
-                        <abp-validation-summary [control]="qcNameModel"
-                                                [controlEl]="qcName"></abp-validation-summary>
+                               [(ngModel)]="qcUser.fax"
+                               #faxModel="ngModel"
+                               #fax />
+                        <abp-validation-summary [control]="faxModel"
+                                                [controlEl]="fax"></abp-validation-summary>
                     </div>
                 </div>
             </tab>
@@ -121,29 +251,29 @@
                     </div>
                 </div>
                 <!--<div class="form-group row required">
-                    <label class="col-md-3 col-form-label" for="surname">
-                        {{ "Surname" | localize }}
-                    </label>
-                    <div class="col-md-9">
-                        <input type="text"
-                               class="form-control"
-                               name="surname"
-                               id="surname"
-                               required
-                               maxlength="32"
-                               [(ngModel)]="currentUser.surname"
-                               #surnameModel="ngModel"
-                               #surnameE1 />
-                        <abp-validation-summary [control]="surnameModel"
-                                                [controlEl]="surnameE1"></abp-validation-summary>
-                    </div>
-                </div>-->
+            <label class="col-md-3 col-form-label" for="surname">
+                {{ "Surname" | localize }}
+            </label>
+            <div class="col-md-9">
+                <input type="text"
+                       class="form-control"
+                       name="surname"
+                       id="surname"
+                       required
+                       maxlength="32"
+                       [(ngModel)]="currentUser.surname"
+                       #surnameModel="ngModel"
+                       #surnameE1 />
+                <abp-validation-summary [control]="surnameModel"
+                                        [controlEl]="surnameE1"></abp-validation-summary>
+            </div>
+        </div>-->
                 <div class="form-group row required">
                     <label class="col-md-3 col-form-label" for="Email">
                         {{ "EmailAddress" | localize }}
                     </label>
                     <div class="col-md-9">
-                        <input type="text"  
+                        <input type="text"
                                class="form-control"
                                name="emailAddress"
                                id="emailAddress"
@@ -158,27 +288,27 @@
                     </div>
                 </div>
                 <!--<div class="form-group row required">
-                    <label class="col-md-3 col-form-label" for="surname">
-                        {{ "Password" | localize }}
-                    </label>
-                    <div class="col-md-9">
-                        <input type="password"
-                               class="form-control"
-                               name="password"
-                               id="password"
-                               required
-                               maxlength="32"
-                               validateEqual="confirmPassword"
-                               reverse="true"
-                               pattern="(?=^.{8,}$)(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?!.*\s)[0-9a-zA-Z!@#$%^&*()]*$"
-                               [(ngModel)]="currentUser.password"
-                               #passwordModel="ngModel"
-                               #password />
-                        <abp-validation-summary [control]="passwordModel"
-                                                [controlEl]="password"
-                                                [customValidationErrors]="passwordValidationErrors"></abp-validation-summary>
-                    </div>
-                </div>-->
+            <label class="col-md-3 col-form-label" for="surname">
+                {{ "Password" | localize }}
+            </label>
+            <div class="col-md-9">
+                <input type="password"
+                       class="form-control"
+                       name="password"
+                       id="password"
+                       required
+                       maxlength="32"
+                       validateEqual="confirmPassword"
+                       reverse="true"
+                       pattern="(?=^.{8,}$)(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?!.*\s)[0-9a-zA-Z!@#$%^&*()]*$"
+                       [(ngModel)]="currentUser.password"
+                       #passwordModel="ngModel"
+                       #password />
+                <abp-validation-summary [control]="passwordModel"
+                                        [controlEl]="password"
+                                        [customValidationErrors]="passwordValidationErrors"></abp-validation-summary>
+            </div>
+        </div>-->
             </tab>
         </tabset>
     </div>
