--- a/angular/src/app/contractor/contractos-list/contractos-list.component.html
+++ b/angular/src/app/contractor/contractos-list/contractos-list.component.html
@@ -118,10 +118,10 @@
                         <table class="table table-striped table-bordered" [busy]="isTableLoading">
                             <thead class="bg-light">
                                 <tr>
-                                    <th>{{ "COMMERCIALNAME" | localize }}</th>
-                                    <th>{{ "CommericalRegisterationNumber" | localize }}</th>
-                                    <th>{{ "ADDRESS" | localize }}</th>
-                                    <th>{{ "Contract_Name" | localize }}</th>
+                                    <th>{{ "Name" | localize }}</th>
+                                    <th>{{ "UserType" | localize }}</th>
+                                    <th>{{ "PhoneNumber" | localize }}</th>
+                                    <!--<th>{{ "Contract_Name" | localize }}</th>-->
                                     <th style="width: 310px;">{{ "Actions" | localize }}</th>
                                 </tr>
                             </thead>
@@ -136,10 +136,10 @@
                           totalItems: totalItems
                         }
                 ">
-                                    <td>{{ user.commericalName }}</td>
-                                    <td>{{ user.commericalRegisterationNumber }}</td>
-                                    <td>{{ user.address }}</td>
-                                    <td>{{ user.contactName }}</td>
+                                    <td>{{ user.name }}</td>
+                                    <td>{{ typValue(user.userTypes) }}</td>
+                                    <td>{{ user.phoneNumber }}</td>
+                                    <!--<td>{{ user.contactName }}</td>-->
                                     <td>
                                         <button type="button"
                                                 class="btn btn-sm bg-secondary"
@@ -147,12 +147,12 @@
                                             <i class="fas fa-pencil-alt"></i>
                                             {{ "Edit" | localize }}
                                         </button>
-                                        <button type="button"
+                                        <!--<button type="button"
                                                 class="btn btn-sm bg-danger mx-2"
                                                 (click)="delete(user)">
                                             <i class="fas fa-trash"></i>
                                             {{ "Delete" | localize }}
-                                        </button>
+                                        </button>-->
                                       
                                     </td>
                                 </tr>
