--- a/angular/src/shared/core.less
+++ b/angular/src/shared/core.less
@@ -170,10 +170,10 @@ body:not(.sidebar-mini-md):not(.sidebar-mini-xs):not(.layout-top-nav) .main-head
 .form-control {
     display: block;
     width: 100%;
-    text-align: left;
+    /*text-align: left;*/
     height: calc(2.25rem + 2px);
     padding: 0.375rem 0.75rem rem;
-    font-size: 1rem;
+    font-size: 14px;
     font-weight: 400;
     line-height: 1.5;
     color: #495057;
@@ -183,4 +183,12 @@ body:not(.sidebar-mini-md):not(.sidebar-mini-xs):not(.layout-top-nav) .main-head
     border-radius: 0.25rem;
     box-shadow: inset 0 0 0 transparent;
     transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+.col-form-label {
+    padding-top: calc(0.375rem + 1px);
+    padding-bottom: calc(0.375rem + 1px);
+    margin-bottom: 0;
+    font-size: inherit;
+    line-height: 1.5;
+    text-align: center;
 }
