--- a/angular/src/app/ageny/ageny.component.html
+++ b/angular/src/app/ageny/ageny.component.html
@@ -35,7 +35,7 @@
                                        [placeholder]="'SearchWithThreeDot' | localize"
                                        [(ngModel)]="keyword"
                                        (keyup.enter)="getDataPage(1)" />
-                                <div class="input-group-append">
+                                <!--<div class="input-group-append">
                                     <button type="button"
                                             class="btn btn-default"
                                             (click)="advancedFiltersVisible = !advancedFiltersVisible">
@@ -43,7 +43,7 @@
                                            [class.fa-angle-up]="advancedFiltersVisible"
                                            [class.fa-angle-down]="!advancedFiltersVisible"></i>
                                     </button>
-                                </div>
+                                </div>-->
                             </div>
                         </div>
                     </div>
