--- a/angular/src/app/project/create-project/create-project.component.html
+++ b/angular/src/app/project/create-project/create-project.component.html
@@ -84,7 +84,7 @@
 
         <div class="form-group row required">
             <label class="col-md-3 col-form-label" for="ADDRESS">
-                {{ "CompleteDate" | localize }}
+                {{ "CompletedDate" | localize }}
             </label>
             <div class="col-md-9">
                 <input type="date"
